Add --illegal-access=permit for JDBC Kerberos FAT for Java 16